--- a/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
+++ b/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                         <outlet property="emailTextField" destination="qBr-5b-RDu" id="V7j-jv-w6O"/>
                         <outlet property="passwordTextField" destination="gtV-Qm-bXV" id="ZdJ-Zu-DTn"/>
                         <outlet property="repeatPasswordTextField" destination="Zww-dh-lMT" id="i9j-ht-a2l"/>
-                        <segue destination="qvT-CG-ZIj" kind="presentation" identifier="welcomeToFinishReg" id="Y3m-bY-A0m"/>
+                        <segue destination="qvT-CG-ZIj" kind="presentation" identifier="welcomeToFinishReg" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="Y3m-bY-A0m"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -114,11 +114,11 @@
             <objects>
                 <viewController id="qvT-CG-ZIj" customClass="FinishRegistrationViewController" customModule="ios_chatting_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3LH-gm-LdL">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Y3-Pj-O7y">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="75"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="프로필" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jSf-zX-68o">
                                         <rect key="frame" x="8" y="22.5" width="398" height="30"/>
@@ -176,34 +176,34 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatarPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="gs0-vu-lFh">
-                                <rect key="frame" x="157" y="83" width="100" height="100"/>
+                                <rect key="frame" x="157" y="127" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="D1Z-Lk-Vh1"/>
                                     <constraint firstAttribute="width" constant="100" id="lIu-Nu-d4m"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이름" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="32t-er-1hV">
-                                <rect key="frame" x="16" y="193" width="382" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="성" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NMb-Ut-NiW">
                                 <rect key="frame" x="16" y="237" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="국가" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cYF-HJ-4Mz">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="성" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NMb-Ut-NiW">
                                 <rect key="frame" x="16" y="281" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="도시" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UN9-mS-cdn">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="국가" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cYF-HJ-4Mz">
                                 <rect key="frame" x="16" y="325" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="전화번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Iu-Ye-XYm">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="도시" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UN9-mS-cdn">
                                 <rect key="frame" x="16" y="369" width="382" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="전화번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Iu-Ye-XYm">
+                                <rect key="frame" x="16" y="413" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -247,9 +247,77 @@
             </objects>
             <point key="canvasLocation" x="755.07246376811599" y="22.767857142857142"/>
         </scene>
+        <!--설정-->
+        <scene sceneID="5ah-Cx-Ovc">
+            <objects>
+                <viewController id="tuJ-Ix-vZ3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Luo-cz-Ndb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ap9-uK-NHv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="설정" image="settings" id="dRG-Iz-mrh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l0h-JK-rTX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2535" y="384"/>
+        </scene>
+        <!--통화-->
+        <scene sceneID="0yY-Q7-uvQ">
+            <objects>
+                <viewController id="CMY-sU-Foa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NrY-62-ikQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="앱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WwA-Y4-7gd">
+                                <rect key="frame" x="16" y="44" width="382" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="nVq-y1-8y2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hes-hx-4WT"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="WwA-Y4-7gd" firstAttribute="leading" secondItem="hes-hx-4WT" secondAttribute="leading" constant="16" id="4AM-td-5aT"/>
+                            <constraint firstItem="WwA-Y4-7gd" firstAttribute="top" secondItem="hes-hx-4WT" secondAttribute="top" id="KTG-zm-vaj"/>
+                            <constraint firstItem="hes-hx-4WT" firstAttribute="trailing" secondItem="WwA-Y4-7gd" secondAttribute="trailing" constant="16" id="bfp-FR-dNd"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="통화" image="call" id="JXn-2g-bey"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VD2-CR-sjz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2535" y="-280"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ICM-BY-NyP">
+            <objects>
+                <tabBarController storyboardIdentifier="mainApplication" id="avh-T6-nhb" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VMh-kE-fIq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="CMY-sU-Foa" kind="relationship" relationship="viewControllers" id="E2h-80-mxy"/>
+                        <segue destination="tuJ-Ix-vZ3" kind="relationship" relationship="viewControllers" id="1Br-xf-6Tf"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GHS-z5-f53" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1645" y="22"/>
+        </scene>
     </scenes>
     <resources>
         <image name="avatarPlaceholder" width="101" height="101"/>
+        <image name="call" width="30" height="30"/>
+        <image name="settings" width="25" height="25"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
