--- a/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
+++ b/ios-chatting-app/ios-chatting-app/Base.lproj/Main.storyboard
@@ -247,22 +247,6 @@
             </objects>
             <point key="canvasLocation" x="755.07246376811599" y="22.767857142857142"/>
         </scene>
-        <!--설정-->
-        <scene sceneID="5ah-Cx-Ovc">
-            <objects>
-                <viewController id="tuJ-Ix-vZ3" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Luo-cz-Ndb">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="ap9-uK-NHv"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="설정" image="settings" id="dRG-Iz-mrh"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="l0h-JK-rTX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2535" y="384"/>
-        </scene>
         <!--통화-->
         <scene sceneID="0yY-Q7-uvQ">
             <objects>
@@ -306,12 +290,41 @@
                     </tabBar>
                     <connections>
                         <segue destination="CMY-sU-Foa" kind="relationship" relationship="viewControllers" id="E2h-80-mxy"/>
-                        <segue destination="tuJ-Ix-vZ3" kind="relationship" relationship="viewControllers" id="1Br-xf-6Tf"/>
+                        <segue destination="iTx-zt-X2v" kind="relationship" relationship="viewControllers" id="hDq-Vv-kff"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GHS-z5-f53" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1645" y="22"/>
+        </scene>
+        <!--설정-->
+        <scene sceneID="8Gn-Ct-wAj">
+            <objects>
+                <tableViewController id="iTx-zt-X2v" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="UZj-Wp-5CY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="N92-NY-k5u">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N92-NY-k5u" id="lbs-TG-UTJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="iTx-zt-X2v" id="9P1-2h-EcN"/>
+                            <outlet property="delegate" destination="iTx-zt-X2v" id="BeC-M5-dbk"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="설정" image="settings" id="P0f-nf-ul0"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hVk-6g-lVA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2535" y="484"/>
         </scene>
     </scenes>
     <resources>
